--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,10 +7,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Login</a>
+            <a class="nav-link active" aria-current="page" routerLink="/">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Registration</a>
+            <a class="nav-link" routerLink="#">Registration</a>
           </li>
         </ul>
       </div>
