--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
             <a class="nav-link active" aria-current="page" routerLink="/">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="#">Registration</a>
+            <a class="nav-link" routerLink="/register">Registration</a>
           </li>
         </ul>
       </div>
